# kee.rs

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: test.yml
completions/: _kee  kee.bash  kee.fish
scripts/: install-auto-complete.sh  post-install.sh  remove-auto-complete.sh
src/: lib.rs  main.rs
src/aws/: mod.rs
tests/: integration_tests.rs  unit_tests.rs
utilities/: githooks.sh  pre-commit
