[package]
name = "kee"
version = "1.0.0"
edition = "2021"
description = "AWS CLI session manager with SSO support"
authors = ["Stefan Aichholzer <theaichholzer@gmail.com>"]
license = "MIT"
repository = "https://github.com/keecli/kee.rs"
keywords = ["aws", "cli", "sso", "session", "manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kee"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
configparser = "3.0"
