[package]
name = "kee"
version = "1.0.0"
edition = "2021"
description = "AWS CLI session manager with SSO support"
authors = ["Stefan Aichholzer <theaichholzer@gmail.com>"]
license = "MIT"
repository = "https://github.com/keecli/kee.rs"
keywords = ["aws", "cli", "sso", "session", "manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kee"
path = "src/main.rs"

[lib]
name = "kee"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
configparser = "3.0"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"

[features]
default = []
integration-tests = []
